<resources>
    <string name="appName">BeautyClub</string>
    <string name="stringRegistration">Регистрация</string>
    <string name="stringConfirm">Далее</string>
    <string name="stringName">Имя</string>
    <string name="stringEmail">E-mail</string>
    <string name="stringPassword">Пароль</string>
    <string name="stringRepeatPassword">Подтвердите пароль</string>
    <string name="stringSignIn">Вход</string>
    <string name="stringNoAccount">Нет аккаунта?</string>
    <string name="stringSignUp">Регистрация</string>
    <string name="stringAlreadyHaveAccount">Уже есть аккаунт?</string>
    <string name="stringOK">OK</string>
    <string name="stringEnterEmail">Введите E-mail</string>
    <string name="stringEnterPassword">Введите пароль</string>
    <string name="stringUnknownError">Неизвестная ошибка</string>
    <string name="stringEnterName">Введите имя</string>
    <string name="stringEnterCorrectEmail">Введите корректный E-mail</string>
    <string name="stringEnterRepeatPassword">Введите повтор пароля</string>
    <string name="stringPasswordsDoNotMatch">Пароли не совпадают</string>
    <string name="stringStep1Title">Давайте подберем Вам мастера 💅</string>
    <string name="stringStep1Subtitle">Здравствуйте!</string>
    <string name="stringStep2Title">Выберите мастера 👤</string>
    <string name="stringStep2Subtitle">Отлично!</string>
    <string name="stringStep3Title">Выберите время ⏰</string>
    <string name="stringStep3Subtitle">Почти готово!</string>
    <string name="stringStep4Title">Готово!\nМы ждем вас</string>
    <string name="stringNext">Далее</string>
    <string name="stringHistory">История записей</string>
    <string name="stringMakeAppointment">Записаться</string>
    <string name="stringDate">Дата</string>
    <string name="stringSelectDate">Выберите дату</string>
    <string name="stringTime">Время</string>
    <string name="stringSelectTime">Выберите время</string>
    <string name="stringSelectCorrectDateTime">Выберите корректную дату и время</string>
    <string name="stringToMain">На главную</string>
    <string name="stringServiceTitle">Услуга</string>
    <string name="stringMaster">Мастер</string>
    <string name="stringClient">Клиент</string>
    <string name="stringPrice">Цена</string>
    <string name="stringAppointmentsHistory">История записей</string>
    <string name="stringUpcoming">Предстоящие</string>
    <string name="stringPast">Прошедшие</string>
    <string name="stringMasterHello">Здравствуйте,\n%1$s!</string>
    <string name="stringPhoneNumber">Номер телефона</string>
    <string name="stringEnterPhoneNumber">Введите номер телефона</string>
    <string name="stringBack">Назад</string>
    <string name="stringSignUpAsMaster">Я - мастер</string>
    <string name="stringWorkingTime">Рабочее время</string>
    <string name="stringSelectWorkingTimeStart">Выберите время начала работы</string>
    <string name="stringSelectWorkingTimeEnd">Выберите время окончания работы</string>
    <string name="stringEnterMessageHint">Введите сообщение...</string>
    <string name="stringServicesChange">Управление услугами</string>
    <string name="stringSelectServices">Выберите услуги, которые вы предоставляете</string>
    <string name="stringCantChangeWorkingTimeHaveAppointments">Есть активные записи, не попадающие в это рабочее время</string>
    <string name="stringSelectCity">Выберите свой город</string>
    <string name="stringNoMasterInCity">К сожалению в Вашем городе нет мастеров, которые оказывают данную услугу</string>
    <string name="stringCity">Город</string>
    <string name="stringCancelAppointment">Отменить запись</string>
    <string name="stringCancel">Отмена</string>
    <string name="stringAppointmentHasBeenCanceled">Запись была отменена</string>
    <string name="stringReviewThisAppointment">Оцените оказанную услугу</string>
    <string name="stringReviewDialogTitle">Поделитесь своими впечатлениями об оказанной вам услуге</string>
    <string name="stringSendReview">Отправить</string>
    <string name="stringReviewInputHint">Опишите, что вам понравилось, а что не очень...</string>
    <string name="stringSpecifyReviewRating">Укажите свою оценку</string>
    <string name="stringReviewSended">Отзыв отправлен!</string>
</resources>