<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.datetime.DateTimeActivity">

    <TextView
        android:id="@+id/subTitleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/stringStep3Subtitle"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/stringStep3Title"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitleLabel"
        app:layout_goneMarginTop="76dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/shape_main_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/stringDate"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/selectedDateLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical|end"
                android:maxLines="1"
                android:text="@string/stringSelectDate"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/separatorView"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/ic_separator"
            app:layout_constraintEnd_toEndOf="@id/dateLayout"
            app:layout_constraintStart_toStartOf="@id/dateLayout"
            app:layout_constraintTop_toBottomOf="@id/dateLayout" />

        <FrameLayout
            android:id="@+id/timeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separatorView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="36dp"
                android:scrollbars="none"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/timeProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="gone" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            style="@style/BaseButtonStyle"
            android:layout_width="0dp"
            android:text="@string/stringMakeAppointment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>