<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".ui.history.HistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/stringAppointmentsHistory"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/upcomingTab"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/stringUpcoming"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:drawableBottomCompat="@drawable/shape_selected_tab_indicator"
            app:layout_constraintEnd_toStartOf="@id/pastTab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel" />

        <TextView
            android:id="@+id/pastTab"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/stringPast"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:drawableBottomCompat="@drawable/shape_unselected_tab_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/upcomingTab"
            app:layout_constraintTop_toTopOf="@id/upcomingTab" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:overScrollMode="never"
            android:paddingTop="44dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcomingTab" />

        <ProgressBar
            android:id="@+id/historyProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcomingTab" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>